--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "@mui/material": "^7.3.2",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.58.0",
+    "crypto": "^1.0.1",
     "framer-motion": "^12.23.13",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
+    "nodemailer": "^7.0.6",
+    "razorpay": "^2.9.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-hook-form": "^7.63.0"
+    "react-hook-form": "^7.63.0",
+    "recharts": "^3.2.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
